Doing sequence id
